--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -9,7 +9,7 @@ The TTSLab API provides a simple interface to state-of-the-art audio [models](/d
 
 <Steps>
     <Step title="Create an API key">
-      [Create an API key in the dashboard here](https://app.elevenlabs8.com/app/settings/api-keys), which you'll use to securely [access the API](/docs/api-reference/authentication).
+      [Create an API key in the dashboard here](https://app.elevenlabs8.com/profile/?tab=api-keys), which you'll use to securely [access the API](/docs/api-reference/authentication).
       
       Store the key as a managed secret and pass it in the `X-API-KEY` header with your requests.
       
