--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -31,7 +31,7 @@ The TTSLab API provides a simple interface to state-of-the-art audio [models](/d
        
        api_key = os.getenv("ELEVENLABS8_API_KEY")
        
-       url = "https://api.elevenlabs8.com/v1/text-to-speech"
+       url = "https://api.elevenlabs8.com/api/tts/audio-generate/"
        
        headers = {
            "X-API-KEY": api_key,
@@ -84,7 +84,7 @@ The TTSLab API provides a simple interface to state-of-the-art audio [models](/d
        
        const apiKey = process.env.ELEVENLABS8_API_KEY;
        
-       const url = 'https://api.elevenlabs8.com/v1/text-to-speech';
+       const url = 'https://api.elevenlabs8.com/api/tts/audio-generate/';
        
        const headers = {
            'X-API-KEY': apiKey,
@@ -93,14 +93,19 @@ The TTSLab API provides a simple interface to state-of-the-art audio [models](/d
        
                // For v3 models
         const data = {
-            inputs: {
+            inputs: [{
                 text: 'The first move is what sets everything in motion.',
                 voice_id: 'JBFqnCBsd6RMkjVDRZzb'
-            },
+              },
+              {
+                text: 'The second move is what sets everything in motion.',
+                voice_id: '2EiwWnXFnvU5JabPnv8n'
+              }
+            ],
             model_id: 'eleven_v3'
         };
        
-               // For other models (v1, v2)
+        // For other models (v1, v2)
         // const data = {
         //     text: 'The first move is what sets everything in motion.',
         //     voice_id: 'JBFqnCBsd6RMkjVDRZzb',
@@ -145,7 +150,7 @@ The TTSLab API provides a simple interface to state-of-the-art audio [models](/d
        ```
        
        ```bash
-       curl -X POST "https://api.elevenlabs8.com/v1/text-to-speech" \
+       curl -X POST "https://api.elevenlabs8.com/api/tts/audio-generate/" \
          -H "X-API-KEY: $ELEVENLABS8_API_KEY" \
          -H "Content-Type: application/json" \
                    # For v3 models
