--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -3,7 +3,7 @@ title: Quickstart
 subtitle: Learn how to make your first TTSLab API request.
 ---
 
-The TTSLab API provides a simple interface to state-of-the-art audio [models](/docs/models) and [features](/docs/api-reference/introduction). Follow this guide to learn how to create lifelike speech with our Text to Speech API using direct HTTP requests.
+The Elevenlabs8 API provides a simple interface to state-of-the-art audio [models](/models) and [features](/api-reference/introduction). Follow this guide to learn how to create lifelike speech with our Text to Speech API using direct HTTP requests.
 
 ## Using the Text to Speech API
 
