--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -54,16 +54,16 @@ X-API-KEY: your_api_key_here
 
 ### Endpoints
 - **Text-to-Speech**: `POST /v1/text-to-speech` - Convert text to speech
-- **Models**: `GET /api/models/` - List available models
-- **Voices**: `GET /api/voices/` - List available voices
-- **History**: `GET /api/elevenlabs-histories/` - Get generation history
+- **Models**: `GET /api/tts/models/` - List available models
+- **Voices**: `GET /api/tts/voices/` - List available voices
+- **History**: `GET /api/tts/elevenlabs-histories/` - Get generation history
 
 ### Voice Management
-- **Create Voice**: `POST /api/voices/` - Create a new voice
-- **Get Voice**: `GET /api/voices/{voice_id}` - Get voice details
+- **Create Voice**: `POST /api/tts/voices/` - Create a new voice
+- **Get Voice**: `GET /api/tts/voices/{voice_id}` - Get voice details
 
 ### User Management
-- **User Profile**: `GET /api/me/` - Get user profile
+- **User Profile**: `GET /api/users/me/` - Get user profile
 
 ## Response Format
 
