--- a/api-reference/endpoint/text2speech.mdx
+++ b/api-reference/endpoint/text2speech.mdx
@@ -32,10 +32,16 @@ headers = {
 
 # For v3 models
 data = {
-    "inputs": {
-        "text": "Hello, this is a test message.",
-        "voice_id": "JBFqnCBsd6RMkjVDRZzb"
-    },
+    "inputs": [
+      {
+          "text": "Hello, this is a test message.",
+          "voice_id": "JBFqnCBsd6RMkjVDRZzb"
+      },
+      {
+          "text": "Hello, this is a test message.",
+          "voice_id": "JBFqnCBsd6RMkjVDRZzb"
+      }
+    ],
     "model_id": "eleven_v3"
 }
 
